# tutorial

./: .env.example  .gitignore  README.md  fix.py  pyproject.toml  roster.example.json
.github/workflows/: test.yml
basketball_analyzer/: __main__.py  cli.py  config.py
basketball_analyzer/commentary/: generator.py
basketball_analyzer/detection/: tracker.py
basketball_analyzer/highlights/: extractor.py
basketball_analyzer/pipeline/: runner.py
basketball_analyzer/reports/: html_reporter.py  json_reporter.py
basketball_analyzer/roster/: jersey_ocr.py  loader.py  models.py
basketball_analyzer/sharing/: email_sender.py  share_link.py
basketball_analyzer/stats/: calculator.py
basketball_analyzer/tts/: narrator.py
basketball_analyzer/video/: composer.py  processor.py
basketball_analyzer/web/: app.py
basketball_analyzer/web/static/: manifest.json  sw.js
basketball_analyzer/web/templates/: base.html  index.html  processing.html  results.html
basketball_analyzer/youtube/: uploader.py
tests/: conftest.py
tests/fixtures/: generate_test_video.py  sample_roster.json
tests/integration/: test_pipeline.py  test_web.py
tests/unit/: test_commentary.py  test_highlights.py  test_jersey_ocr.py  test_roster.py  test_stats.py
